# MVP-OKcamera

./: .gitignore  .mcp.json  AGENTS.md  README.md
app/backend/: README.md  pyproject.toml
app/backend/backend/: __init__.py  capture.py  debug.py  fakes.py  main.py  mvp_settings.py  render.py  session.py  thumbnails.py
app/backend/tests/: overlay_probe.py  test_api.py  test_capture.py  test_debug.py  test_fakes.py  test_mvp_settings.py  test_render.py  test_session.py  test_thumbnails.py
data-collection/dashboard/: README.md  pyproject.toml
data-collection/dashboard/backend/: app.py  capture.py  coco.py  dataset_writer.py  encoder.py  main.py  postpass.py  render.py  video_writer.py
data-collection/dashboard/docs/tasks/: U2-queue.md
data-collection/dashboard/scripts/: find_camera.py  spike_fps.py  validate_import.py
data-collection/dashboard/static/: app.js  index.html  style.css
data-collection/dashboard/tests/: conftest.py  fakes.py  recording_fakes.py  test_api.py  test_capture.py  test_capture_recording.py  test_coco.py  test_dataset_writer.py  test_detector_contract.py  test_discard_cancel.py  test_encoder.py  test_fixtures.py  test_postpass.py  test_recording_api.py  test_recording_e2e.py  test_render.py  test_scaffold.py  test_u1_storage.py  test_u3_frontend.py  test_video_writer.py
model/: .gitignore  README.md  pyproject.toml
model/Log/: OrbbecSDK.log.txt
model/docs/: README.md  demo-validation.md  detector.md  linker-design.md  plan-first-detections.md  plan-gta-link-tracklet-refinement.md  session-linker-SPEC.md  tracker-interface.md  unknown-recovery-SPEC.md
model/matcher-autoresearch/: .gitignore  TRIED.md  calibrate_shape_features.py  sweep_hyperparams.py
model/matcher-autoresearch/champion/: size_features.py
model/matcher-autoresearch/frozen/: README.md  eval.py  holdout.py
model/matcher-autoresearch/method/: champion.py
model/playground/: 03_cached_detections.ipynb  03_tracking_from_video.ipynb  04_ocsort_tracking.ipynb  05_cbiou_tracking.ipynb  README.md
model/playground/scripts/: build_detections_cache.py
model/playground/trackers/: bytetrack.ipynb  deep_ocsort.ipynb  ocsort.ipynb  sort.ipynb
model/playground/trackers/autoresearch/: best_experiment.py  eval.py  experiment.py  prepare.py  program.md  runs.jsonl
model/playground/trackers/deep_ocsort_vendor/: association.py  cmc.py  embedder.py  kalmanfilter.py  ocsort.py  tracker.py
model/playground/trackers/experiments/: evals.ipynb  sort.ipynb
model/scripts/: replay_session.py
model/tests/components/: test_rfdetr_postprocess.py
model/tests/data/: test_dataset.py  test_models.py  test_predictions.py
model/tests/pipelines/: test_champion.py  test_config.py  test_persistent_gallery.py  test_session_linker.py  test_tracking.py
(+203 files in other folders)
