[project]
name = "orc-model"
version = "0.1.0"
description = "ORC detection/tracking model — trained offline, produces the artifact app/backend consumes."
readme = "README.md"
authors = [
    { name = "Constantijn", email = "constantijn.coppers@ethilink.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "pytest>=9.1.1",
]
