[project]
name = "orc-backend"
version = "0.1.0"
description = "ORC demo backend — CaptureLoop, Session state machine, and the FastAPI HTTP seam to app/frontend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orc-model",
    "supervision>=0.26.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
orc-demo = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
orc-model = { path = "../../model", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
