[project]
name = "orc-dashboard"
version = "0.1.0"
description = "ORC data-collection dashboard — live capture + snapshot into COCO-VID datasets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "opencv-python>=4.10",
    "supervision>=0.26.1",
    "pycocotools>=2.0.11",
    "numpy>=2.0",
    "orc-model",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pillow>=10.0",
]

[tool.uv.sources]
orc-model = { path = "../../model", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
